# biowatch

./: README.md  sonar-project.properties
.github/workflows/: mirror-to-epitech.yml  sonarqube.yml
backend/: .gitignore  .mcp.json  CLAUDE.md  README.md  commitlint.config.cjs  pyproject.toml
backend/.claude/: notion.py
backend/.github/workflows/: pr-commitlint.yml
frontend/: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md
frontend/.claude/: notion.mjs  package-lock.json  package.json
frontend/.github/: PULL_REQUEST_TEMPLATE.md
frontend/.github/ISSUE_TEMPLATE/: bug.md  feature.md
frontend/.github/workflows/: mirror-to-central.yml
