[project]
name = "biowatch-backend"
version = "0.1.0"
description = "BioWatch backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "apps/api",
    "apps/jobs",
    "packages/clients",
    "packages/core",
    "packages/geo",
    "packages/ml",
    "packages/scoring",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["apps", "packages", "tests"]
